--- a/SurveySystem/pom.xml
+++ b/SurveySystem/pom.xml
@@ -42,11 +42,19 @@
 			<version>3.10.1</version>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>io.vavr</groupId>-->
-<!--			<artifactId>vavr</artifactId>-->
-<!--			<version>0.10.2</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.3.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.24.0</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
