--- a/SurveySystem/pom.xml
+++ b/SurveySystem/pom.xml
@@ -89,6 +89,12 @@
 			<artifactId>postgresql</artifactId>
 			<version>42.2.11</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
